@@ -12,36 +12,36 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-        @Bean
-        public CorsConfigurationSource corsConfigurationSource() {
-                CorsConfiguration configuration = new CorsConfiguration();
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
 
-                // ✅ UPDATE: Add your VM domain here
-                configuration.setAllowedOrigins(Arrays.asList(
-                                // Development
-                                // Dev (Direct access)
-                                "http://localhost:3000",
+        // ✅ UPDATE: Add your VM domain here
+        configuration.setAllowedOrigins(Arrays.asList(
+                // Development
+                // Dev (Direct access)
+                "http://localhost:3000",
 
-                                // ✅ TEST FIX: Allow Nginx HTTPS access locally
-                                "https://localhost",
-                                "https://127.0.0.1",
-                                "http://localhost",
-                                "http://127.0.0.1",
+                // ✅ TEST FIX: Allow Nginx HTTPS access locally
+                "https://localhost",
+                "https://127.0.0.1",
+                "http://localhost",
+                "http://127.0.0.1",
 
-                                // Production VM (Keep this for later)
-                                "https://deti-tqs-03.ua.pt", // <-- YOUR VM (HTTP fallback)
-                                "http://deti-tqs-03.ua.pt" // <-- YOUR VM (HTTP fallback)
-                ));
+                // Production VM (Keep this for later)
+                "https://deti-tqs-03.ua.pt",   // <-- YOUR VM (HTTP fallback)
+                "http://deti-tqs-03.ua.pt"   // <-- YOUR VM (HTTP fallback)
+        ));
 
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(List.of("*"));
-                configuration.setAllowCredentials(true);
-                configuration.setExposedHeaders(Arrays.asList("Authorization", "Location"));
-                configuration.setMaxAge(3600L);
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Location"));
+        configuration.setMaxAge(3600L);
 
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
 
-                return source;
-        }
+        return source;
+    }
 }
